# social-pulse

./: .cursorrules  .geminirules  .gitignore  Dockerfile  Dockerfile.analysis.dbmigrations  Dockerfile.analysis.poller  Dockerfile.analysis.run  Dockerfile.analysis.wfe  Dockerfile.report.api  Dockerfile.report.dbmigrations  README.md  deploy.sh  social_pulse.tf  terraform.tfvars  variables.tf
services/analysis_service/: .env.template  README.md  base-tooling-requirements.txt  pyproject.toml  requirements.in  requirements.txt  run_wfe.sh  yoyo.ini
services/analysis_service/db-migrations/: 20250418_01_create_workflow_execution_params.py  20250609_01_add_status_tracking_columns.py  20250718_01_add_parent_workflow_id.py  20250722_01_update_status_enum_values.py  20250903_01_add_report_id.py  20251102_01_add_include_justification_flag.py  20251108_01_add_exported_status_to_wfe.py  20260408_01_add_relevance_threshold.py
services/analysis_service/src/: event_executor.py  run_sentiment.py  sentiment_analysis.py
services/analysis_service/src/api/: deaggregator.py  poller.py  runner_entry.py  workflow_executor.py
services/analysis_service/src/pipeline/: core.py
services/analysis_service/src/prompts/: promptconfig.py
services/analysis_service/src/services/: workflow.py
services/analysis_service/src/tasks/: cleanup.py  constants.py  core.py  execution.py  generate_justifications_categories.py  generate_products_brands_lookup.py  generate_prompt.py  llm_response_processing.py  load_parent_data.py  process_justifications.py  process_sov_brands.py  run_sentiment_job.py  text_prompt.py  video_prompt.py  youtube_comments.py  youtube_data.py
services/analysis_service/tests/api/: deaggregator_test.py  poller_test.py  runner_entry_test.py  workflow_executor_test.py
services/analysis_service/tests/tasks/: cleanup_test.py  consolidate_brands_products_test.py  core_test.py  execution_test.py  generate_justifications_categories_test.py  generate_prompt_test.py  llm_response_processing_test.py  load_parent_data_test.py  process_justifications_test.py  process_sov_brands_test.py  run_sentiment_job_test.py  sentiment_task_mixins.py  text_prompt_test.py  video_prompt_test.py  youtube_comments_test.py  youtube_data_test.py
services/report_service/: .env.template  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  yoyo.ini
services/report_service/db-migrations/: 20250729_01_add_reports_table.py  20260217_01_add_include_justifications_column.py  20260219_01_add_report_insights.py  20260318_01_add_relevance_threshold.py
services/report_service/src/: main.py
services/report_service/tests/: test_main.py
services/report_service/ui/: .dockerignore  .prettierrc.js  README.md  apphosting.yaml  eslint.config.js  eslint.ignores.js  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
services/shared_lib/: README.md  base-tooling-requirements.txt  deploy_to_local.sh  deploy_to_services.sh  publish_to_ar.sh  pyproject.toml  requirements.in  requirements.txt
services/shared_lib/scripts/: update_requirements_hash.sh
(+200 files in other folders)
