[project]
name = "analysis_service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "jmistral@google.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["src"]
log_level = "DEBUG"
log_cli = true
