[project]
name = "socialpulse_common"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "jmistral@google.com"},
]
dependencies = [
    "google_api_python_client",
    "google-cloud-logging",
    "psycopg2-binary",
    "pydantic-settings",
    "pytest",
    "python-dotenv",
    "google-cloud-bigquery",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
log_level = "DEBUG"
log_cli = true
